1.9.11

1.9.10
Frontend
  * FIX: Network error popups are now shown when an error occurs and hidden again
         automatically when a subsequent call succeeds

1.9.9
Frontend:
  * FIX: Fixed possible "Cannot read property 'conf' ... Line 4383" error when
         trying to interact with the map while it is initially loading
  * FIX: Fixed incompatibility with PHP 7.2 when creating new users
  * FIX: Fixed loading sounds when using non standard HTTP/HTTPS ports
  * FIX: Fixed "JavaScript Error : checkHideMenu" on worldmaps when header is
         disabled

1.9.8
Frontend:
  * FIX: Fixed incompatibility with PHP 7.2 in Dwoo 3rd party code
  * FIX: Fixed outdated Monitoring portal link in header menu

Automap:
  * FIX: Fixed automaps filter_group when using ndomy/pgsql backend

Installer:
  * FIX: Prevent error when trying to replace old map options and no map exists

1.9.7
Frontend:
  * FIX: Fixed object sort by state regression in 1.9.6

1.9.6
Core:
  * Dynamic map objects can now be sorted by state (Using the new map global
    settings dynmap_sort and dynmap_order)
  * FIX: Improved error handling when trying to use aggregation objects with
         backends that don't support these object types
  * FIX: Fixed "A non-numeric value encountered" when creating new automaps
         without width/height attributes. A workaround would be to add
	 height/width options manually to the map configuration.

1.9.5
Frontend:
  * FIX: Fixed wrong hostname label in service hover menus
  * FIX: Fixed repeated zoom of background image on state updates

Worldmap:
  * FIX: Fixed errors when saving viewport as new map
  * FIX: Fixed rare issue when cloning just added objects
  * FIX: Fixed broken worldmap when using relative objects

Installer:
  * FIX: Fixed displaying wrong backend option "-b" in summary output
  * FIX: Don't display "update backend configuration" confirm in quiet mode
  * FIX: Don't fail updating map configurations when no maps are defined